Fix/tree yaml writer (#50)
* fix tree indentation

* fix test

* allow for contextual id generation

* enhance logging listener to write leave entries on exceptions

* write leaving nodes into yaml executed call tree

* fix linting

* fix based on review